# brainglobe-sphinx-config

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
doc/: conf.py  index.rst  modifying.rst  using.rst
doc/section/: sub-section.rst
src/brainglobe_sphinx_config/: __init__.py
src/brainglobe_sphinx_config/_templates/: header.html  header_links.json  version.html
test_doc/: conf.py  index.rst
test_doc/section/: index.rst
